Thu Aug 14 12:58:40 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gartra.adb: Added a constant.

Wed Aug 13 16:11:03 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gartra.adb: Remove the length of each entry from the trace
	  file since using 'Output and 'Input instead of 'Write and 'Read
	  will make this automatically.

Tue Aug 12 13:08:31 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: Use libtool to compile files and generate shared
	  library as well. Extract duplicate symbols from libgnat.a.

Fri Jun  6 15:30:43 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-stratt.adb: Changed 2**8 - 1 into 16#FF# to prevent
	  (letigimate) error on VMS.

Wed Jun  4 18:00:57 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gafizi.adb: Replaced pragma Elaborate by pragma Elaborate_All
	  since it makes no sense to elaborate only one of the needed
	  packages.

Thu May 29 17:30:14 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-rpcpoo.adb: Do not start handling a request until elaboration
	is terminated.

	* s-rpc.ads: (Initialize): new private initialization procedure.

	* s-rpc.adb: (Initialize): new procedure which installs the
	Public_Receiver.
	(Public_RPC_Receiver): do not check for end of elaboration here
	since it will block the protocol task.

	* s-rpcini.adb: Initialize System.RPC.

Tue May 20 17:09:53 1997  Laurent Pautet  <pautet@dorine.enst.fr>

	* s-rpstio.adb, s-rpstio.adb: Add to system.RPC.stream_io
 	 procedures Open and Close in order to have some controls on the
 	 stream in a concurrent application.

Sun May 18 18:30:03 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garhea.adb: Puzzling bug signaled by Thomas Hautesserres fixed.

Wed May 14 15:05:52 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-rpcpoo.adb: Use values provided by System.Garlic.Options.

	* s-garopt.ads: Changed constants with reasonable values *evil grin*

Wed May 14 14:35:11 1997  Laurent Pautet  <pautet@quasimodo.enst.fr>
