@@ -1,3 +1,12 @@
+Wed Aug 27 17:00:09 1997  Samuel Tardieu  <sam@inf.enst.fr>
+
+	* s-garuti.ads: (Raise_With_Errno, Raise_Communication_Error): New
+	  procedures.
+
+	* s-gartcp.adb: Use them.
+
+	* Makefile.am: Makefile depends on Makefile.fil, not Makefile.in.
+
 Thu Aug 14 12:58:40 1997  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* s-gartra.adb: Added a constant.
